--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,6 +52,12 @@ jobs:
       working-directory: ./godemo
     - run: mage build
       working-directory: ./godemo
+    - run: mage buildforlinux
+      working-directory: ./godemo
+    - run: mage buildformac
+      working-directory: ./godemo
+    - run: mage buildforarmmac
+      working-directory: ./godemo
     - run: mage buildimage
       working-directory: ./godemo
     - run: mage pushimage
