--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,6 +38,8 @@ jobs:
         working-directory: ./godemo
         env:
           GOLANGCI_LINT_FLAGS: --out-format=github-actions
+      - run: mage ensure
+        working-directory: ./godemo
       - run: mage vulncheck
         continue-on-error: true
         working-directory: ./godemo
