--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -40,6 +40,8 @@ jobs:
         working-directory: ./godemo
         env:
           GOLANGCI_LINT_FLAGS: --out-format=github-actions
+      - run: mage ensure
+        working-directory: ./godemo
       - run: mage vulncheck
         continue-on-error: true
         working-directory: ./godemo
