Add npm support

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,10 @@ jobs:
           username: ${{ secrets.QUAY_USERNAME }}
           password: ${{ secrets.QUAY_TOKEN }}
 
+      - uses: actions/setup-node@v3
+        with:
+          node-version: latest
+
       - name: Verify dependencies
         run: |
           go mod tidy
@@ -68,6 +72,18 @@ jobs:
       - run: mage pushimage
         working-directory: ./godemo
       - run: mage swaggerdocs
+        working-directory: ./godemo
+      - run: |
+          if ($(mage yamlLint)) ; then
+            echo "mage yamlLint should have failed!"
+            exit 1
+          fi
+        working-directory: ./godemo
+      - run: mage yamlFmt
+        working-directory: ./godemo
+      - run: mage yamlLint
+        working-directory: ./godemo
+      - run: mage ui:testAndBuild
         working-directory: ./godemo
       - run: test -x godemo/target/bin/linux/amd64/godemo
       - run: test -f godemo/target/bin/linux/amd64/godemo.sha256
