--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -44,9 +44,15 @@ jobs:
         working-directory: ./godemo
         env:
           GOLANGCI_LINT_FLAGS: --out-format=github-actions
+      # backwards compatibility check
       - run: mage ensure
         working-directory: ./godemo
+      # backwards compatibility check
       - run: mage ensureInSync
+        working-directory: ./godemo
+      - run: mage tidy
+        working-directory: ./godemo
+      - run: mage tidyAndVerifyNoChanges
         working-directory: ./godemo
       - run: mage vulncheck
         continue-on-error: true
@@ -104,8 +110,7 @@ jobs:
         run: go tool cover -func target/reports/merged-test-coverage.out | grep LoadSpec | grep '100.0%'
       - run: docker images | grep 'quay.io/elisaoyj/sre-godemo'
       - name: Notify failure
-        if: github.event.pull_request.draft == false &&
-          failure()
+        if: github.event.pull_request.draft == false && failure()
         env:
           MATTERMOST_WEBHOOK_URL: ${{ secrets.MATTERMOST_WEBHOOK_URL }}
           MATTERMOST_TEXT: "${{ github.repository }} PR build. Please check [here](${{ github.event.pull_request.html_url }}/checks)."
