--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,9 +42,15 @@ jobs:
         working-directory: ./godemo
         env:
           GOLANGCI_LINT_FLAGS: --out-format=github-actions
+      # backwards compatibility check
       - run: mage ensure
         working-directory: ./godemo
+      # backwards compatibility check
       - run: mage ensureInSync
+        working-directory: ./godemo
+      - run: mage tidy
+        working-directory: ./godemo
+      - run: mage tidyAndVerifyNoChanges
         working-directory: ./godemo
       - run: mage vulncheck
         continue-on-error: true
