--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,9 +7,7 @@ on:
 
 jobs:
   build-release:
-    runs-on:
-    - self-hosted
-    - kaas
+    runs-on: elisa-normal
     timeout-minutes: 5
 
     steps:
