--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,7 +51,7 @@ jobs:
       - run: mage go:vulnCheck
         continue-on-error: true
         working-directory: ./godemo
-      - run: mage licensecheck
+      - run: mage go:licenses
         working-directory: ./godemo
       - run: mage unittest
         working-directory: ./godemo
@@ -100,7 +100,6 @@ jobs:
       - run: test -f godemo/target/reports/unit-test-coverage.out
       - run: test -f godemo/target/reports/integration-test-coverage.out
       - run: test -f godemo/target/reports/merged-test-coverage.out
-      - run: test -f godemo/target/reports/licenses.csv
       - name: Validate merge coverage
         working-directory: ./godemo
         run: go tool cover -func target/reports/merged-test-coverage.out | grep LoadSpec | grep '100.0%'
