--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -22,12 +22,12 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Login to Quay
+      - name: Login to Google Artifact Registry
         uses: docker/login-action@v3
         with:
-          registry: quay.io
-          username: ${{ secrets.QUAY_USERNAME }}
-          password: ${{ secrets.QUAY_TOKEN }}
+          registry: europe-north1-docker.pkg.dev
+          username: _json_key
+          password: ${{ secrets.GAR_JSON_KEY }}
 
       - uses: actions/setup-node@v4
         with:
@@ -98,7 +98,7 @@ jobs:
       - name: Validate merge coverage
         working-directory: ./godemo
         run: go tool cover -func target/tests/cover/combined/cover.txt | grep LoadSpec | grep '100.0%'
-      - run: docker images | grep 'quay.io/elisaoyj/sre-godemo'
+      - run: docker images | grep 'europe-north1-docker.pkg.dev/sose-sre-5737/sre-public/godemo'
       - name: Notify failure
         if: github.event.pull_request.draft == false && failure()
         env:
