--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,6 +54,8 @@ jobs:
         working-directory: ./godemo
       - run: mage go:crossBuild
         working-directory: ./godemo
+      - run: mage lambda:buildAll
+        working-directory: ./godemo
       - run: mage docker:build
         working-directory: ./godemo
       - run: mage docker:push
@@ -87,6 +89,7 @@ jobs:
       - run: test -x godemo/target/bin/windows/amd64/godemo
       - run: test -f godemo/target/bin/windows/amd64/godemo.sha256
       - run: test -f godemo/target/testbin/godemo
+      - run: test -f godemo/target/bin/linux/amd64/lambda/godemo/bootstrap
       - run: test -d godemo/target/tests/cover/unit/
       - run: test -d godemo/target/tests/cover/int/
       - run: test -f godemo/target/tests/cover/combined/cover.txt
