--- a/.github/workflows/base.yml
+++ b/.github/workflows/base.yml
@@ -25,7 +25,7 @@ jobs:
     timeout-minutes: 15
     steps:
       - uses: actions/checkout@v4
-          
+
       - uses: elisa-actions/setup-go-and-mage@v1
         with:
           modFile: /home/runner/_work/mageutil/mageutil/go.mod
@@ -49,7 +49,7 @@ jobs:
           cd ../../
           go mod tidy
           git diff --exit-code -- ./go.mod ./go.sum || (echo "Deps are not up to date: run 'go mod tidy' before commit" && exit 1)
-          
+
       - name: Prepare demo project
         run: go mod tidy
 
@@ -61,19 +61,19 @@ jobs:
           fi
 
       - run: mage go:lint
-      
+
       - name: Unit tests
         run: |
           mage go:unitTest
           test -d target/tests/cover/unit/
-      
+
       - name: Integration tests
         run: |
           mage go:integrationTest
           test -f target/testbin/godemo
           test -d target/tests/cover/int/
-          
-      - name: Validate coverage 
+
+      - name: Validate coverage
         run: |
           mage go:coverProfile
           test -f target/tests/cover/combined/cover.txt
@@ -96,7 +96,7 @@ jobs:
         run: |
           mage lambda:buildAll
           test -f target/bin/linux/amd64/lambda/godemo/bootstrap
-      - name: sbom      
+      - name: sbom
         run: |
           mage go:sbom
           test -f target/bin/linux/amd64/godemo.bom.json
@@ -128,7 +128,7 @@ jobs:
           docker images | grep 'europe-north1-docker.pkg.dev/sose-sre-5737/sre-public/godemo'
 
       - name: Notify failure on main
-        if: github.event.pull_request.draft == false && failure()
+        if: ${{ github.event_name }} != pull_request && failure()
         env:
           MATTERMOST_WEBHOOK_URL: ${{ secrets.mattermost-webhook-url }}
           MATTERMOST_TEXT: "${{ github.repository }} [${{ github.event.ref }}](${{ github.event.repository.html_url }}/tree/${{ github.event.ref }}) build failed."
