--- a/.github/workflows/base.yml
+++ b/.github/workflows/base.yml
@@ -128,7 +128,9 @@ jobs:
           docker images | grep 'europe-north1-docker.pkg.dev/sose-sre-5737/sre-public/godemo'
 
       - name: Notify failure on main
-        if: ${{ github.event_name != 'pull_request' }}  && failure()
+        if: |
+          github.ref == 'refs/heads/main' &&
+          failure()
         env:
           MATTERMOST_WEBHOOK_URL: ${{ secrets.mattermost-webhook-url }}
           MATTERMOST_TEXT: "${{ github.repository }} [${{ github.event.ref }}](${{ github.event.repository.html_url }}/tree/${{ github.event.ref }}) build failed."
